--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "react-ga": "^2.1.2",
     "react-router": "^3.0.2",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1"
-  },
-  "devDependencies": {
+    "style-loader": "^0.13.1",
     "babel-cli": "^6.22.2"
   },
   "scripts": {
