--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "My website for school",
   "main": "index.js",
   "dependencies": {
+    "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.1",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "node-sass": "^4.3.0",
@@ -19,8 +21,7 @@
     "react-ga": "^2.1.2",
     "react-router": "^3.0.2",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "babel-cli": "^6.22.2"
+    "style-loader": "^0.13.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
