--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "start": "babel-node src/server.js --presets es2015,react,stage-0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "react-helmet": "^4.0.0"
+  }
 }
