--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "start": "babel-node src/server.js --presets es2015,react,stage-0"
   },
   "author": "",
-  "license": "ISC",
+  "license": "ISC"
 
 }
