--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.2",
+    "react-helmet": "^4.0.0",
+    "react-highlight": "^0.9.0",
     "react-router": "^3.0.2",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "react-helmet": "^4.0.0",
-    "react-highlight": "^0.9.0"
+    "sitemap": "^1.9.0",
+    "style-loader": "^0.13.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,5 +32,4 @@
   },
   "author": "",
   "license": "ISC"
-
 }
