--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
+    "jquery": "^3.1.1",
+    "mongodb": "^2.2.22",
     "node-sass": "^4.3.0",
     "path": "^0.12.7",
     "react": "^15.4.2",
