--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.2",
     "react-helmet": "^4.0.0",
-    "react-highlight": "^0.9.0",
+    "react-prism": "^4.0.0",
     "react-router": "^3.0.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1"
