--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My website for school",
   "main": "index.js",
   "dependencies": {
+    "aos": "^2.1.1",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
