--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "My website for school",
   "main": "index.js",
   "dependencies": {
-    "aos": "^2.1.1",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -20,11 +19,13 @@
     "node-sass": "^4.3.0",
     "path": "^0.12.7",
     "react": "^15.4.2",
+    "react-codepen": "^0.1.0",
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.2",
     "react-helmet": "^4.0.0",
     "react-prism": "^4.0.0",
     "react-router": "^3.0.2",
+    "react-youtube": "^7.3.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1"
   },
