--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "codemirror": "^5.23.0",
     "css-loader": "^0.26.1",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
@@ -19,6 +20,7 @@
     "node-sass": "^4.3.0",
     "path": "^0.12.7",
     "react": "^15.4.2",
+    "react-codemirror": "^0.3.0",
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.2",
     "react-helmet": "^4.0.0",
