--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-router": "^3.0.2",
     "react-youtube": "^7.3.0",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
