--- a/package.json
+++ b/package.json
@@ -4,32 +4,34 @@
   "description": "My website for school",
   "main": "index.js",
   "dependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "codemirror": "^5.23.0",
-    "css-loader": "^0.26.1",
-    "ejs": "^2.5.5",
-    "express": "^4.14.0",
-    "file-loader": "^0.9.0",
-    "jquery": "^3.1.1",
-    "mongodb": "^2.2.22",
-    "node-sass": "^4.3.0",
-    "path": "^0.12.7",
-    "react": "^15.4.2",
-    "react-codemirror": "^0.3.0",
-    "react-dom": "^15.4.2",
+    "babel-cli": "6.22.2",
+    "babel-core": "6.22.1",
+    "codemirror": "5.23.0",
+    "ejs": "2.5.5",
+    "express": "4.14.0",
+    "jquery": "3.1.1",
+    "mongodb": "2.2.22",
+    "node-sass": "4.3.0",
+    "path": "0.12.7",
+    "react": "15.4.2",
+    "react-codemirror": "0.3.0",
+    "react-dom": "15.4.2",
     "react-ga": "^2.1.2",
-    "react-helmet": "^4.0.0",
-    "react-prism": "^4.0.0",
-    "react-router": "^3.0.2",
-    "react-youtube": "^7.3.0",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "underscore": "^1.8.3"
+    "react-helmet": "4.0.0",
+    "react-prism": "4.0.0",
+    "react-router": "3.0.2",
+    "react-youtube": "7.3.0",
+    "underscore": "1.8.3"
+  },
+  "devDependencies": {
+    "babel-loader": "6.2.10",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-react": "6.22.0",
+    "babel-preset-stage-0": "6.22.0",
+    "css-loader": "0.26.1",
+    "file-loader": "0.9.0",
+    "sass-loader": "4.1.1",
+    "style-loader": "0.13.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
