--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-core": "6.22.1",
     "codemirror": "5.23.0",
     "ejs": "2.5.5",
-    "express": "4.14.0",
+    
     "jquery": "3.1.1",
     "mongodb": "2.2.22",
     "node-sass": "4.3.0",
@@ -24,7 +24,9 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
+    "express": "4.14.0",
     "babel-loader": "6.2.10",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
     "babel-preset-stage-0": "6.22.0",
