--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "babel-cli": "6.22.2",
     "babel-core": "6.22.1",
     "codemirror": "5.23.0",
+    "compression": "^1.6.2",
     "ejs": "2.5.5",
-    
     "jquery": "3.1.1",
     "mongodb": "2.2.22",
     "node-sass": "4.3.0",
@@ -24,13 +24,13 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
-    "express": "4.14.0",
     "babel-loader": "6.2.10",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
     "babel-preset-stage-0": "6.22.0",
+    "codemirror": "^5.23.0",
     "css-loader": "0.26.1",
+    "express": "4.14.0",
     "file-loader": "0.9.0",
     "sass-loader": "4.1.1",
     "style-loader": "0.13.1"
