--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "react-prism": "4.0.0",
     "react-router": "3.0.2",
     "react-youtube": "7.3.0",
-    "underscore": "1.8.3"
-  },
-  "devDependencies": {
-    "babel-loader": "6.2.10",
+    "underscore": "1.8.3",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
     "babel-preset-stage-0": "6.22.0",
+  },
+  "devDependencies": {
+    "babel-loader": "6.2.10",
     "codemirror": "^5.23.0",
     "css-loader": "0.26.1",
     "express": "4.14.0",
