--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "underscore": "1.8.3",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
-    "babel-preset-stage-0": "6.22.0",
+    "babel-preset-stage-0": "6.22.0"
   },
   "devDependencies": {
     "babel-loader": "6.2.10",
