--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "underscore": "1.8.3",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
-    "babel-preset-stage-0": "6.22.0"
-  },
-  "devDependencies": {
+    "babel-preset-stage-0": "6.22.0",
     "babel-loader": "6.2.10",
     "codemirror": "^5.23.0",
     "css-loader": "0.26.1",
